--- a/synclyrics-beta/config.yaml
+++ b/synclyrics-beta/config.yaml
@@ -1,5 +1,5 @@
 name: "SyncLyrics BETA"
-version: "1.8.1"
+version: "v1.8.1"
 slug: "synclyrics-beta"
 image: ghcr.io/anshulj999/synclyrics-ha-beta-{arch}
 init: false
