--- a/synclyrics/config.yaml
+++ b/synclyrics/config.yaml
@@ -1,5 +1,5 @@
 name: "SyncLyrics"
-version: "1.8.1"
+version: "v1.8.1"
 slug: "synclyrics"
 image: ghcr.io/anshulj999/synclyrics-ha-{arch}
 init: false
