--- a/synclyrics/config.yaml
+++ b/synclyrics/config.yaml
@@ -34,6 +34,10 @@ options:
   https_port: 9013  # HTTPS port (access via https://haip:9013)
   save_lyrics_locally: true  # Save fetched lyrics to local database for offline access
   album_art_db: true  # Cache album art and artist images locally
+  # Music Assistant Integration (optional - for MA users)
+  music_assistant_server_url: ""  # MA server URL (e.g., http://192.168.1.100:8095)
+  music_assistant_token: ""  # API token (generate in MA web UI → Settings → Security)
+  music_assistant_player_id: ""  # Specific player ID (blank = auto-detect first active player)
 schema:
   spotify_client_id: str
   spotify_client_secret: str
@@ -52,6 +56,9 @@ schema:
   save_lyrics_locally: "bool?"
   album_art_db: "bool?"
   spotify_polling_slow_interval: "float?"
+  music_assistant_server_url: "str?"
+  music_assistant_token: "str?"
+  music_assistant_player_id: "str?"
 # ports:
 #   9012/tcp: 9012
 host_network: true
